[INTERNAL,REFACTOR] In PSI-BLAST, use process builder and StringList for command lin